# styrstall

./: .gitignore  LICENSE  README.md  dagster.yaml  dbview.py  fetch_stations.py  pyproject.toml
.github/workflows/: fetch_stations.yml
dagster_home/.telemetry/: id.yaml
styrstall_dagster/: __init__.py
styrstall_dagster/assets/: constants.py  dbt_assets.py  helpers.py  stations.py  weather.py
styrstall_dagster/jobs/: __init__.py
styrstall_dagster/partitions/: __init__.py
styrstall_dagster/schedules/: __init__.py
styrstall_dbt/: dbt_project.yml  profiles.yml
styrstall_dbt/macros/: utils.sql
styrstall_dbt/models/mart/: bike_data.sql  obt_trips.sql  schema.yml  stations.sql  stations_data.sql  trips.sql  trips_by_station.sql
styrstall_dbt/models/staging/: schema.yml  source.yml  stg_stations.sql  stg_weather.sql
styrstall_evidence/: package-lock.json  package.json
styrstall_evidence/pages/: 1-Usage-Patterns-Analysis.md  2-User-Behavior-Exploration.md  index.md
